# participants-id

./: .npmignore  LICENSE  README.md  README_en.md  package.json
.github/workflows/: ci.yml  release_js_ts.yml
flet/: README.md  README_en.md  mkdocs.yml  pyproject.toml  verify_imports.py
flet/src/browser_id/: __init__.py  browser_id.py
flet/src/participant_id/: participant_id.py
flet/src/participant_id.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
flet/src/participants_id/: __init__.py  participants_id.py
flet/tests/: test_browser_id.py  test_participant_id.py  test_participants_id.py
flutter/: README.md  README_en.md  pubspec.yaml
flutter/lib/: browser_id.dart  participant_id.dart  participants_id.dart
flutter/test/: participant_id_test.dart  participants_id_test.dart
js-ts/: .gitignore  README.md  README_en.md  package-lock.json  package.json  tsup.config.ts
js-ts/scripts/: verify-cjs.js  verify-esm.mjs
js-ts/src/: browser-id.ts  index.test.ts  index.ts  participants-id.ts
js-ts/tests/: index.test.ts
